--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+html, body { width: 100%; height: 100%; padding: 0; margin: 0 }
+
+div { position: absolute; padding: 1em; border: 1px solid #000 }
+
+#nw { background: #ff002b; top: 0;   left: 0;   right: 50%; bottom: 50% }
+#ne { background: #02d3de; top: 0;   left: 50%; right: 0;   bottom: 50% }
+#sw { background: #8f9696; top: 50%; left: 0;   right: 50%; bottom: 0}
+#se { background: #090; top: 50%; left: 50%; right: 0;   bottom: 0}
 .center {
     text-align: center;
   }
