--- a/breakingbad/style.css
+++ b/breakingbad/style.css
@@ -2,6 +2,6 @@
     text-align: center;
   }
   .dark {
-            background-color: #e6e7e8;
-            color: #3e3f40;
+            background-color: #3e3f40;
+            color: #e6e7e8;
         }
