--- a/breakingbad/style.css
+++ b/breakingbad/style.css
@@ -3,14 +3,14 @@
   }
  body {
   padding: 25px;
-  background-color: white;
-  color: black;
+background-color: #e6e7e8;
+color: #3e3f40;
   font-size: 25px;
 }
 
 .dark-mode {
-  background-color: black;
-  color: white;
+background-color: #e6e7e8;
+color: #3e3f40;
 }
 .switch {
   position: relative;
@@ -44,17 +44,17 @@
   width: 26px;
   left: 4px;
   bottom: 4px;
-  background-color: white;
+  background-color: #3e3f40;
   -webkit-transition: .4s;
   transition: .4s;
 }
 
 input:checked + .slider {
-  background-color: #2196F3;
+  background-color: #e6e7e8;
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
+  box-shadow: 0 0 1px #e6e7e8;
 }
 
 input:checked + .slider:before {
